improve gradlw